--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon (1).ico">
+  <meta name="description" content="Psychology Bachelor's Graduate looking for work.">
+  <meta name="author" content="862180319">
 
-  <title>John Doe - Business Administration</title>
+  <title>Antonio Macias-Gonzalez - Psychotherapy</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Antonio Macias-Gonzalez</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/antoniomacias-gonzalez.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,28 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Antonio Macias-Gonzalez
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Psychology📚</div>
+        <p class="lead mb-4">My name is Antonio Macias-Gonzalez. I am a fourth year Psychology student who is soon to graduate this coming June from the University of California, Riverside. While COVID-19 has placed us in unpredictable circumstances and with online school and lockdowns, it was difficult to get involved. Nonetheless we did everything we could while working and accomplishing school both full-time. While I am about to get my degree, I have many other traits and experience that would help in my field. Maneuvering through the pandemic and finding time management strategies that accommodate this new era is experience within itself. A variety of issues have presented themselves for mental health and with a high rise of awareness to get help, I want to be a person that people can comfortably come to with their problems. 
+<br><br>
 
-        Enter bio here<br><br>
+        During the pandemic I worked at Aerotek Inc. where I assembled ventilators in an assembly line that would be sent to the hospitals to assist those with respiratory problems. While I needed to work to pay for my expenses, it was great knowing that my job directly contributed to helping the pandemic and that the configurations I made on the ventilators had to be fully functional or else somebody with urgent need would have a malfunctioning unit. This job helped me think about other people and connect myself to my work and understand the bigger thing that I am contributing to. I realized the impact that a job as small as mine can have. The job site was also highly collaborative with there always being a need to communicate with co-workers and learn new positions. Teamwork created efficiency in the workplace and I learned how to navigate myself through the work and where I fit in best to help the company the most I can. 
+<br><br>
 
-        Enter bio here
+        The pandemic opened up new areas of need that allowed for different types of employment to flourish. For example, I worked in the delivery driver business for companies like DoorDash and Instacart. These jobs were in higher demand at the time due to the outbreak of COVID-19 and the lockdowns. Many people were afraid to go out and did not want to risk the health of their loved ones to go buy groceries. I decided to do the job regardless of the COVID exposure as I just made sure to follow all precautions for the safety of myself and others. Knowing that my job was directly helping people and making sure that sick, disabled, and elderly people were able to get their items in a timely manner helped me grow my emotional intelligence and have a lot of patience and compassion. While I understood times were hard and this job required a lot, I always liked looking at the bright side of things and took notice more of how much of a help delivery drivers are during this time period. I started loving seeing how grateful some people would be once they received their items and me helping them take it inside and just talk to them about their day. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/antonio-macias-3635a1277/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/amaci049">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.youtube.com/@tonymac4862/videos">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:amaci049@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +94,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Configurator</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.aerotek.com/">Aerotek Inc.</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Configured respiratory ventilators<br> 
+              • Tested functions of each ventilator to make sure they are functional before shipment<br>
+              • Signed off on procedures and made sure all paperwork was correct<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">April 2020 - September 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Delivery Driver</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://shoppers.instacart.com/role/full-service">Instacart</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for picking up orders<br>
+              • Responsible to maintain patience and compassion with customer under stressful environments<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">March 2020 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Warehouse Worker</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://hiring.amazon.com/job-opportunities/warehouse-jobs#/">Amazon</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Scanned items to and from their locations to make sure things are tracked<br>
+            • Transferred packages into trailers for them to be shipped<br>
+            • Organized packages onto carts for better organization<br>
+            • Made sure things ran well and nothing was off<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">July 2021 - January 2022</span>
           </div>
         </div>
 
@@ -152,33 +154,33 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelor of Arts in Psychology </div>
+            <div>3.6 GPA</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">Graduated June 2023</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
+          <div class="resume-content">
+            <h3 class="mb-0">Rancho Mirage High School</h3>
+            <div class="subheading mb-3">Diploma</div>
+            <div>School Attendance</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Graduated June 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Psychology Doctorate</div>
+            <div>Psychotherapy</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2023 - Future</span>
           </div>
         </div>
 
@@ -191,7 +193,12 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/Pic1.png" width="500px">
+            <img src="img/Pic2.jpg" width="500px"><br>
+    <img src="img/Pic3.jpg" width="500px">
+    <img src="img/pic4.jpg" width="500px"><br>
+    <img src="img/pic5.jpg" width="500px">
+    <img src="img/pic6.png" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +206,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Antonio Macias-Gonzalez</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
